# YoosephLab

GRASP2_src/: CMakeLists.txt
GRASP2_src/include/: align.h  align_batch.h  bio_alphabet.h  bwt.h  bwt_search.h  concatenator.h  correct_sequence.h  debruijn_graph.h  divsufsort_private.h  frequency_table.h  hash_bucket.h  iterative_assembly.h  kmer.h  kmer_filtering.h  kmer_unitcoder.h  loader.h  minimizer_sort.h  reduced_alphabet.h  scoring_function.h  scoring_prot.h  seq_align.h  sequence_search.h  string_graph.h
GRASP2_src/src/: align_batch.cc  bio_alphabet.cc  bwt.cc  bwt_search.cc  concatenator.cc  correct_sequence.cc  debruijn_graph.cc  divsufsort.cc  iterative_assembly.cc  kmer.cc  kmer_filtering.cc  kmer_unitcoder.cc  loader.cc  main_assemble.cc  main_build.cc  minimizer_sort.cc  sequence_search.cc  string_graph.cc  utils.cc  utils.cc~
GRASP_scripts/: BenchmarkPerformance.pl  BenchmarkWithBlast.pl  BenchmarkWithBlast_overall.pl  CheckNotIncluded.pl  CheckTPFP.pl  ComputePerformanceFromCount.pl  ComputePerformanceFromCount_bad.pl  CountBlastHits.pl  DefineMarineGlycolysisTrueReadSet.pl  EstimateEfficiency.pl  EstimateOverallPerformance.pl  FetchBLASTAlignedSeqs.pl  FetchFASTMAlignedSeqs.pl  FetchPSIBLASTAlignedSeqs.pl  FetchSequences.pl  Format_multiFASTA.pl  ListIncludedReads.pl  ListIncludedReads_new.pl  ListIncludedReads_obsolete.pl  ListIncludedReads_test.pl  MapID.pl  ParseMarineGlycolysisHMMResults.pl  ParsePfamFamilies.pl  RawPerformancesCount_Amphora2.pl  RemapToAllContigs.pl  RemapToGRASPOutput.pl  RenameFiles_Mix3fams.pl  RetrievePTTfromKEGG.pl  RunConvertCertificate.pl  RunFetchAlignedSeqs.pl  RunFetchAlignedSeqsPSIBLAST.pl  RunGraspBatch.pl  (+23 more)
(+666 files in other folders)
